tests/expectations/passes/check_interfaces/interface_multiple_inheritance_conflict_fail.out
Error [ECHI03712001]: Interface `C` has a conflicting definition for `process` inherited from `A`. Members with the same name must have identical signatures.
    --> test:11:1
     |
  11 | interface C : A + B {}
     | ^^^^^^^^^^^^^^^^^^^^^^
     |
     = Ensure both interfaces define the same signature for this member, or rename one of them.
